<!--
  ~ Copyright (c) 09/01/2024 Toyem Tezem Ryan Parfait & Djouaka Kelefack Lionel all rights reserved
  -->

<resources>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="app_name">MeteoApp</string>
    <!-- Strings related to login -->
    <string name="login">Login</string>
    <string name="logout">Esci</string>
    <string name="chiudi">Chiudi</string>
    <string name="profile">Profilo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_failed">"L'utente non existe"</string>
    <string name="invalid_email_login">L\'email non è valido</string>
    <string name="invalid_password_login">password non valido</string>
    <string name="action_register">Non sei Registrato ?</string>
    <string name="password_required">Imetti una pasword</string>
    <string name="email_required">Inserire un indirizzo email</string>

    <!-- Strings related to register -->
    <string name="Register">Registrati</string>
    <string name="action_login">Hai un account ?</string>
    <string name="confirm_password">Conferma Password</string>
    <string name="invalid_user">Nome utente non valido</string>
    <string name="invalid_password">La password deve contenere 6 carateri </string>
    <string name="welcome">"Welcome!"</string>
    <string name="Crea_account">Crea account</string>
    <string name="password_non_corrisponde">Password non Corrisponde</string>
    <string name="tutti_campi_richiesti">Devi compilare tutti i campi !!</string>
    <string name="succes">Registrazione completata con successo</string>
    <string name="password_length_error">La passwort deve contenere almeno 8 carateri</string>
    <string name="accedi">Hai un account ? Accedi</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_main_login">MainLoginActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Strings related to menu -->
    <string name="actual_location">Luogho attuale</string>
    <string name="favorite_place">Luoghi preferiti</string>
    <string name="api_key" translatable="false">AIzaSyDehNTD6QrfIyAFNR-LoRdLFJIyeqVFlnA</string>
    <string name="developer">Sviluppatori</string>
    <string name="about">A proposito</string>
    <string name="setting">Parametri</string>
    <string name="search">ricerca</string>
    <string name="result_cancel">Non è stato selezionato un luogo</string>
    <string name="title_activity_place">PlaceActivity</string>


    <!-- Strings related to about page -->
    <string name="info_app">Siamo lieti di presentare il nostro progetto universitario "Un'applicazione Meteo", progettato, idealizzato e programmato da due studenti dell\'Università Politecnica delle Marche sotto la supervisione del professor Emanuele Storti.</string>
    <string name="toyemgit" translatable="false">https://github.com/toyemryan/MeteoApp</string>
    <string name="lionelgit" translatable="false">https://github.com/c-ode6968</string>

    <!-- Strings related to setting fragment-->
    <string name="title_activity_setting">SettingActivity</string>
    <string name="temperature">Temperatura</string>
    <string name="notification">Notificazione</string>
    <string name="live_data_background">Fondo in diretto</string>
    <string name="live_data_background_explain">Image di fondo legato alla temperatura</string>
    <string name="language">lingua</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <!-- Strings related to network and location-->
    <string name="error_network">pas de connexion réseau</string>
    <string name="location_good">Autorizzazione alla posizione concessa</string>
    <string name="location_bad">Autorizzazione alla posizione negata</string>
    <string name="access_location">Aggiornamenti sulla posizione richiesti</string>
    <string name="no_network_connection">Nessuna connessione internet</string>
    <string name="active_connection">Per favore attiva la tua connessione</string>
    <string name="error_gps">GPS non supportato</string>
    <string name="gps_non_abilitato">GPS non abilitato</string>
    <string name="gps_enabled">GPS già attivato</string>
    <string name="refresh">Aggiorna di nuovo</string>

    <!-- Strings related to delete city -->
    <string name="deletecity">Sei sicuro di voler cancelare la città di %1$s ? </string>
    <string name="deletecity1">Delete</string>
    <string name="cancel_1">Completamento automatico annullato dall\'utente</string>
    <string name="exist">Questa città esiste già nella lista</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>

    <!-- Strings related to exit -->
    <string name="exit">Confirmazione !</string>
    <string name="exit_1">Sei sicuro di voler uscire ?</string>
    <string name="exit_2">Cancelli</string>


    <!-- Strings related to meteo -->
    <string name="day">Durante la giornata</string>
    <string name="nex_day">Previsioni 5 giorni</string>
    <string name="hours">Maggiori informazioni sulla giornata</string>




    <!-- Strings related to meteo -->
    <string name="pioggia">Pioggia</string>
    <string name="velocita_vento">velocità del vento</string>
    <string name="humidita">Humidità</string>
    <string name="visibilita">Visibilità</string>
    <string name="nuvolosita">nuvolosità</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="pressione">pressione</string>

    <!-- Strings related to profile -->
    <string name="confirm">Sei sicuro di voler eliminare il tuo profilo ?</string>
    <string name="sip">SI</string>
    <string name="nop">NO</string>
    <string name="success">Profilo eliminato con successo.</string>
    <string name="error">Impossibile eliminare il profilo.</string>
    <string name="cancell">Elimina profilo</string>
    <string name="btn">Elimina</string>
    <string name="profileU">Profilo Utente</string>






    <string-array name="pref_temperature">
        <item>°C</item>
        <item>°F</item>
    </string-array>

    <string-array name="pref_num">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_language">
        <item>it</item>
        <item>fr</item>
    </string-array>


</resources>