<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/actualLocation"
        android:icon="@drawable/location_pin"
        android:title="@string/actual_location"/>

    <item
        android:id="@+id/placeFragment"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="@string/favorite_place"/>

    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting"
        android:title="@string/setting"/>
    <!--
    <item
        android:id="@+id/city"
        android:icon="@drawable/location_city"
        android:title="@string/city"/>
    -->

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_acount"
        android:title="@string/profile"/>
    <item
        android:id="@+id/logout"
        android:icon="@drawable/exit_to_app_black_24dp"
        android:title="@string/logout"/>

    <item
        android:id="@+id/aboutMeteoApp"
        android:title="@string/developer">
        <menu>
            <item
                android:id="@+id/aboutFragment"
                android:icon="@drawable/about_meteoapp"
                android:title="@string/about"/>
        </menu>
    </item>

</menu>