<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/meteo_font"
        tools:context=".login.LoginFragment">


        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:layout_marginBottom="72dp"
            android:text="@string/accedi"
            android:textColor="@color/md_theme_dark_background"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textField"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintBottom_toTopOf="@+id/passwordt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:textSize="20dp"
                android:textStyle="bold"
                android:inputType="textWebEmailAddress|textNoSuggestions"
                android:maxLines="1"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            app:errorIconDrawable="@drawable/ic_error"
            app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginTop="0dp"
                android:inputType="textWebEmailAddress|textNoSuggestions"
                android:maxLines="1"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="330dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/login"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.465"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordt"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textViewn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="20dp"
            android:text="@string/action_register"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="380dp"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:text="@string/Register"
            android:textColor="@color/md_theme_dark_primaryContainer"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.068"
            app:layout_constraintStart_toEndOf="@+id/textViewn"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>